crates/ir/tests/snapshots/lower_test__hkt__hkt_codegen_erasure.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module hkt__hkt_codegen_erasure

type Box[a] = Box#0(a)
trait Functor[o8] { fmap(o8[p8], (p8) -> q8): o8[q8] }
instance hkt__hkt_codegen_erasure.Functor[Box] { fmap=Functor$$Box$$fmap }
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/io/println as println(o): Unit
import core/option/Some as Some(e): Option[e]
import core/option/None as None(): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/list/Nil as Nil(): List[h]
import core/ordering/LT as LT(): Ordering
import core/ordering/EQ as EQ(): Ordering
import core/ordering/GT as GT(): Ordering
import core/vec/to_list as to_list(Vec[c8]): List[c8]
declare println: (o) -> Unit
declare to_list: (Vec[c8]) -> List[c8]

fn fold_box(v0: List[y8], v1: s8[y8], v2: (s8[y8], y8) -> s8[y8]) -> s8[y8] =
  let_join [recur] v3(v4: List[y8], v5: s8[y8], v6: (s8[y8], y8) -> s8[y8]) =
    switch v4 {
      1 ->
        v5
      0 (v7: y8, v8: List[y8]) ->
        let v9: s8[y8] = call_closure v6(v5, v7)
        jump v3(v8, v9, v6)
    }
  in
  jump v3(v0, v1, v2)

fn main() -> Unit =
  let v11: Vec[Int] = make_vec(1, 2, 4)
  let v12: List[Int] = call to_list(v11)
  let v13: ~Box[Int] = construct Box::Box#0(0)
  let v19: (Box[Int], Int) -> ~Box[Int] = make_closure(lambda$54, [])
  let v10: Box[Int] = call fold_box(v12, v13, v19)
  switch v10 {
    0 (v20: Int) ->
      let v21: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v22: Unit = call println(v21, v20)
      v22
  }

fn Functor$$Box$$fmap(v23: Box[x9], v24: (x9) -> z9) -> ~Box[z9] =
  switch v23 {
    0 (v25: x9) ->
      let v26: z9 = call_closure v24(v25)
      let v27: ~Box[z9] = construct Box::Box#0(v26)
      v27
  }

fn lambda$54(v14: Box[Int], v15: Int) -> ~Box[Int] =
  switch v14 {
    0 (v16: Int) ->
      let v17: Int = add_int(v16, v15)
      let v18: ~Box[Int] = construct Box::Box#0(v17)
      v18
  }
